--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ plugins:
 github:
   is_project_page: false
 show_downloads: false
+title: Polystammtisch Dortmund
+description: Ein Treffpunkt für Menschen, die konsensuelle nicht-monogame Lebensformen leben, leben wollen oder hierfür aufgeschlossen und interessiert sind.
